--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "grunt-broccoli-build": "^0.4.0",
     "grunt-browserify": "^3.2.1",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-webpack": "^1.0.8",
-    "webpack": "^1.4.13",
-    "webpack-dev-server": "^1.6.6"
+    "webpack": "^1.4.13"
   },
   "directories": {
     "test": "tests"
